force-app/main/default/objects/Deployment_Artifact__c/Deployment_Artifact__c.object-meta.xml
<CustomObject>
    <label>Deployment Artifact</label>
    <nameField>
        <displayFormat>ART-{000000}</displayFormat>
        <label>Deployment Artifact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployment Artifacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>