force-app/main/default/objects/Deployment_Artifact__c/fields/Artifact_Name__c.field-meta.xml
<CustomField>
    <fullName>Artifact_Name__c</fullName>
    <label>Artifact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>