force-app/main/default/objects/Deployment_Artifact__c/fields/Artifact_Type__c.field-meta.xml
<CustomField>
    <fullName>Artifact_Type__c</fullName>
    <label>Artifact Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>