force-app/main/default/objects/Deployment_Artifact__c/fields/Change_Type__c.field-meta.xml
<CustomField>
    <fullName>Change_Type__c</fullName>
    <label>Change Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Added</fullName>
            </value>
            <value>
                <fullName>Modified</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>