force-app/main/default/objects/Deployment_Artifact__c/fields/File_Path__c.field-meta.xml
<CustomField>
    <fullName>File_Path__c</fullName>
    <label>File Path</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>