force-app/main/default/objects/Deployment_Artifact__c/fields/PR_Number__c.field-meta.xml
<CustomField>
    <fullName>PR_Number__c</fullName>
    <label>PR Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>